Multiple Bugfixes and Features (#363)
* Fixing not visible tool-points

* Fixing Loadout for Offhand

Offhand can now be placed without errors

* Adding new 1.16 materials

Adding new 1.16 materials and prevent outdating through new materials.

* MatchTeamColor Condidtion showing matching item to color

* Fixes PlayerHasItemCondition

* Fixing AsyncInventoryEvent Calls

* Adding GameTickTrigger

* Fixing Region Select NoSuchElementError

* Adding keep inventory option

* Update to 1.19
- Change RegionDisplay to Barrier and imporved performance issues, when many and big regions were displayed

* Update minigamesdistribution to 1.19

* Update Mavenworkflow to Java 17

* Adding potionFriendlyFire configuration

* T::28 Correcting GUI information
Action "Take Item" had another name in the gui -> "Give Item"

* T::32,39,42 Translation strings missing
Several translation string were missed or were not correctly used.

* Added every possible vanilla potion effekt.

* Fixes T::45, T::46, T::49, T::53

- TakeFlagTrigger wasn't triggered
- Only Oak-Signs worked as Flags
- Broadcasts wasn't working
- CTF-Broadcasts are now a seperate option
- Flag Home-Returns were announced, even though broadcasts were disabled

* T::44 Support for signs

* T::9 Autocomplete Commands: set node/region

* T::22 Wrong message when there's no lobby

* T::18 Flag falling in lava does not respawn

* Replaced deprecated MinigameUtils.formStr call

* Fixed reset of Blocks in Minigames. (#3)

* Fixed reset of Blocks in Minigames.

* Rebuilt how the regeneration region works (#4)

RegenRegions can now be splittet into several smaller regions. This allows to be more flexible: Big Regions with eg. 4 million blocks are crashing the server. If only small fitting regions are set, there is no need for 4 million blocks to regen.
Also a block limit is implemented to ensure that a crash is not going to happen. This limit can be changed within the m